testing/envoy/cachev2-compose.json
{
  "admin": {
    "address": {
      "socket_address": {
        "address": "127.0.0.1",
        "port_value": 9901
      }
    }
  },
  "bootstrap_extensions": [
    {
      "name": "envoy.bootstrap.internal_listener",
      "typed_config": {
        "@type": "type.googleapis.com/envoy.extensions.bootstrap.internal_listener.v3.InternalListener"
      }
    }
  ],
  "static_resources": {
    "listeners": [
      {
        "name": "main",
        "address": {
          "socket_address": {
            "address": "127.0.0.1",
            "port_value": 8080
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "stat_prefix": "outer",
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "name": "local",
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "files_internal"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cache",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.cache_v2.v3.CacheV2Config",
                        "typed_config": {
                          "@type": "type.googleapis.com/envoy.extensions.http.cache_v2.simple_http_cache.v3.SimpleHttpCacheV2Config"
                        }
                      }
                    },
                    {
                      "name": "envoy.filters.http.router",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                      }
                    }
                  ],
                  "generate_request_id": false
                }
              }
            ]
          }
        ]
      },
      {
        "name": "files_internal_listener",
        "internal_listener": {},
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "stat_prefix": "inner",
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "name": "inner",
                        "domains": [
                          "*"
                        ]
                      }
                    ]
                  },
                  "http_filters": [
                    {
                      "name": "envoy_files",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter",
                        "dynamic_module_config": {
                          "name": "envoy_files"
                        },
                        "filter_name": "envoy_files",
                        "terminal_filter": true,
                        "filter_config": {
                          "@type": "type.googleapis.com/google.protobuf.StringValue",
                          "value": "{\"root\": \"./www\", \"cache_control\": \"public, max-age=300\"}"
                        }
                      }
                    }
                  ],
                  "generate_request_id": false
                }
              }
            ]
          }
        ]
      }
    ],
    "clusters": [
      {
        "name": "files_internal",
        "connect_timeout": "1s",
        "load_assignment": {
          "cluster_name": "files_internal",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "envoy_internal_address": {
                        "server_listener_name": "files_internal_listener"
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      }
    ]
  }
}
